--- a/src/App.css
+++ b/src/App.css
@@ -1,68 +1,79 @@
 header {
   background-color: rgb(33, 33, 33);
-  font-size: 40px;
+  font-size: 30px;
   color: white;
   text-align: center;
-  height: 120px;
+  height: 90px;
   padding: 20px;
-  border-bottom: 5px solid #0DAFDE;
+  border-bottom: 5px solid #3e028d;
   margin-bottom: 10px;
-  opacity: 90%;
+  /* display: flex; */
+  /* opacity: 90%; */
 }
 
-.centered {
+body {
+  background-image: url("https://www.ppt-backgrounds.net/thumbs/orange-burgundy-stripes-power-point-orange-burgundy-image-presentation.jpeg");
+  background-size: 100vw;
+}
+
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.button-group {
+  display: flex;
   align-items: center;
 }
 
-.row {
-  display: flex;
+.sortBtn {
+  justify-content: center;
+  border-radius: 5px;
+  margin-top: 20px;
+  margin-right: 20px;
 }
-Col {
-  font-weight: bold;
-}
-
-/* .form-group {
-  background-color: blueviolet;
-} */
 
 .search-form {
   display: flex;
-}
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background: linear-gradient(to bottom right, #faf9f9 0%, #fca403 150%);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.card:hover {
+  transform: scale(1.05);
+  position:relative;
+  
+}
+
+.card-body {
+  padding-bottom: 10px;
+
+}
+
+.location {
+  text-align: right;
+}
+
+h6 {
+  padding-top: 5px;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+@media only screen and (max-width: 400px) {
+  header {
+    font-size: 32px;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media only screen and (max-width: 280px) {
+  header {
+    font-size: 26px;
+    padding: 17px;
   }
-} */
+}
